# coding-challenge-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
src/: config.rs  lib.rs  main.rs  startup.rs
src/handlers/: get_animal_fact.rs  get_fact.rs  health_check.rs  mod.rs
tests/: health_check.rs  integration_tests.rs
