[package]
name = "shuttle-assignment"
version = "0.1.0"
edition = "2021"
authors = ["Laurence Sonnenberg - laurence@robothouse.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shuttle-assignment"

[dependencies]
axum = "0.6.20"
hyper = "0.14"
config = "0.13.3"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
tower = "0.4"
serde-aux = "4"

# Old version, waiting for sqlx 0.6
# Using time because chrono has a segfault vulnerability
time = "0.3.25"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter"]

[dependencies.secrecy]
version = "0.8"
features = ["serde"]

[dependencies.tower-http]
version = "0.4.3"
features = ["full"]

[dev-dependencies]
reqwest = "0.11"
