[package]
name = "coding-challenge"
version = "0.1.0"
edition = "2021"
authors = ["Laurence Sonnenberg - laurence@robothouse.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "coding-challenge"

[dependencies]
axum = "0.6.20"
hyper = "0.14"
config = "0.13.3"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tower = "0.4"
serde-aux = "4"
serde_json = "1.0.105"
rand = "0.8.5"
enum-iterator = "1.4.1"
thiserror = "1.0.40"
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter"]

[dependencies.tower-http]
version = "0.4.3"
features = ["full"]

[dev-dependencies]
once_cell = "1.7.2"
wiremock = "0.5"
